syntax = "proto3";
package seiprotocol.seichain.legacy.dex.v0;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types/legacy/v0";

message ContractInfo {
  uint64 codeId = 1;
  string contractAddr = 2; 
  
}